# backend/main.py
@@ -2,6 +2,7 @@ from contextlib import asynccontextmanager
 
 from app.database import async_engine
 from app.routers.auth import router as auth_router
+from app.routers.books import router as books_router
 from fastapi import FastAPI
 
 
@@ -13,6 +14,7 @@ async def lifespan(_app: FastAPI):
 
 app = FastAPI(title="Library API", version="0.1.0", lifespan=lifespan)
 app.include_router(auth_router)
+app.include_router(books_router)
 
 
 @app.get("/health")
